--- a/kio/kssl/Makefile.am
+++ b/kio/kssl/Makefile.am
@@ -1,6 +1,6 @@
 INCLUDES=$(all_includes) $(SSL_INCLUDES)
 
-lib_LTLIBRARIES = libkssl.la
+noinst_LTLIBRARIES = libkssl.la
 KSSLVERSION=	2.9.8
 KSSLPATCH=	0
 METASOURCES= AUTO
@@ -53,7 +53,7 @@ libkssl_la_SOURCES	= \
 			keygenwizard.ui		  \
 			keygenwizard2.ui
 
-libkssl_la_LDFLAGS = $(all_libraries) -version-info 4:0 -no-undefined
+libkssl_la_LDFLAGS = $(all_libraries) -no-undefined
 libkssl_la_LIBADD = $(LIB_KDEUI) 
 libkssl_la_DEPENDENCIES = $(LIB_KDEUI)
 
