--- a/kioslave/http/Makefile.am
+++ b/kioslave/http/Makefile.am
@@ -3,7 +3,7 @@
 
 SUBDIRS = kcookiejar
 
-INCLUDES=	-I$(srcdir)/.. -I$(srcdir)/../.. $(all_includes)
+INCLUDES=	$(all_includes)
 LDFLAGS =       $(all_libraries)
 
 ####### Files
@@ -13,7 +13,7 @@ lib_LTLIBRARIES = kio_http_cache_cleaner.la
 kde_module_LTLIBRARIES = kio_http.la
 
 kio_http_la_SOURCES = http.cc
-kio_http_la_LIBADD = ../libkio.la $(LIBZ)
+kio_http_la_LIBADD = $(LIB_KIO) $(LIBZ)
 kio_http_la_LDFLAGS = $(all_libraries) -module $(KDE_PLUGIN)
 
 kio_http_cache_cleaner_SOURCES = dummy.cpp
