--- a/configure.in.in
+++ b/configure.in.in
@@ -158,9 +158,9 @@ LIB_KFORMULA='$(top_builddir)/kformula/libkformula.la'
 AC_SUBST(LIB_KFORMULA)
 LIB_KIO='$(top_builddir)/kio/libkio.la'
 AC_SUBST(LIB_KIO)
-LIB_KSYCOCA='$(top_builddir)/kio/libksycoca.la'
+LIB_KSYCOCA='$(top_builddir)/kio/libkio.la'
 AC_SUBST(LIB_KSYCOCA)
-LIB_KFILE='$(top_builddir)/kfile/libkfile.la'
+LIB_KFILE='$(top_builddir)/kio/libkio.la'
 AC_SUBST(LIB_KFILE)
 LIB_KPARTS='$(top_builddir)/kparts/libkparts.la'
 AC_SUBST(LIB_KPARTS)
@@ -170,8 +170,6 @@ LIB_KHTML='$(top_builddir)/khtml/libkhtml.la'
 AC_SUBST(LIB_KHTML)
 LIB_DCOP='$(top_builddir)/dcop/libDCOP.la'
 AC_SUBST(LIB_DCOP)
-LIB_KSSL='$(top_builddir)/kssl/libkssl.la'
-AC_SUBST(LIB_KSSL)
 
 AC_SUBST(EXTRA_SUBDIRS)
 
