--- a/kio/kio/Makefile.am
+++ b/kio/kio/Makefile.am
@@ -18,20 +18,13 @@
 
 AM_CPPFLAGS = -D_LARGEFILE64_SOURCE
 
-INCLUDES=  -I$(srcdir)/.. $(all_includes) $(SSL_INCLUDES)
+INCLUDES=  -I$(top_srcdir) -I$(srcdir)/.. -I$(srcdir)/../kssl  $(all_includes) $(SSL_INCLUDES)
 
-SUBDIRS = . klauncher kded file http ftp pics tests ksendbugmail kpac \
-	kdesasl gzip kssld $(BZIP2DIR)
+noinst_LTLIBRARIES = libkiocore.la libksycoca.la
 
-lib_LTLIBRARIES = libkio.la libksycoca.la kio_uiserver.la
-bin_PROGRAMS = kio_uiserver kmailservice ktelnetservice
-
-#libkioslave_la_LDFLAGS = -version-info 4:0
-#libkioslave_la_LIBADD = ../kdeui/libkdeui.la
-#libkioslave_la_SOURCES = slavebase.cpp connection.cpp passdlg.cpp
-
-libksycoca_la_LDFLAGS = $(KDE_MT_LDFLAGS) -version-info 4:0 -no-undefined
-libksycoca_la_LIBADD = ./libkio.la
+libksycoca_la_LDFLAGS = $(KDE_MT_LDFLAGS)
+#libksycoca_la_LIBADD = nothing, undefined references will be checked
+# when creating libkio.la
 
 libksycoca_la_SOURCES = \
 	kdirwatch.cpp \
@@ -67,10 +60,10 @@ include_HEADERS = \
 	kfilterbase.h kfilterdev.h kemailsettings.h kscan.h kdatatool.h \
 	karchive.h kfilefilter.h kfilemetainfo.h renamedlgplugin.h
 
-libkio_la_LDFLAGS = -version-info 4:0 -no-undefined $(all_libraries)
-libkio_la_LIBADD = ../kdeui/libkdeui.la ../kdesu/libkdesu.la ../kssl/libkssl.la $(LIBZ) $(LIBFAM) $(LIBVOLMGT)
+libkiocore_la_LDFLAGS = $(all_libraries)
+libkiocore_la_LIBADD = ../../kdeui/libkdeui.la ../../kdesu/libkdesu.la $(LIBZ) $(LIBFAM) $(LIBVOLMGT)
 
-libkio_la_SOURCES = \
+libkiocore_la_SOURCES = \
 	kshred.cpp \
 	kprotocolmanager.cpp \
 	slave.cpp slaveinterface.cpp \
@@ -88,14 +81,7 @@ libkio_la_SOURCES = \
 	kemailsettings.cpp authinfo.cpp \
 	kprotocolinfo.cpp kprotocolinfofactory.cpp
 
-kio_uiserver_SOURCES = dummy.cpp
-kio_uiserver_LDADD = kio_uiserver.la
-kio_uiserver_LDFLAGS = $(KDE_RPATH) $(all_libraries) 
-
-kio_uiserver_la_SOURCES = uiserver.cpp uiserver.skel observer.stub \
-	renamedlg.cpp skipdlg.cpp
-kio_uiserver_la_LIBADD = libksycoca.la ../kssl/libkssl.la ../kdesu/libkdesu.la 
-kio_uiserver_la_LDFLAGS = $(all_libraries) -module -avoid-version
+uiserver_DIR = $(top_srcdir)/kio/misc
 
 METASOURCES = AUTO
 
@@ -106,9 +92,8 @@ kioinclude_HEADERS = connection.h \
 	netaccess.h job.h scheduler.h \
         jobclasses.h paste.h slavebase.h \
 	progressbase.h defaultprogress.h \
-	statusbarprogress.h uiserver.h uiserver_stub.h tcpslavebase.h \
-	renamedlg.h skipdlg.h \
-	observer.h chmodjob.h \
+	statusbarprogress.h tcpslavebase.h \
+	observer.h chmodjob.h uiserver_stub.h \
         kpac.h kmdbase.h authinfo.h \
 	ioslave_defaults.h http_slave_defaults.h previewjob.h thumbcreator.h
 
@@ -117,37 +102,12 @@ noinst_HEADERS = kservicetypefactory.h kservicefactory.h \
 	kmessageboxwrapper.h \
 	ktraderparse.h ktraderparsetree.h yacc.h \
 	kimageiofactory.h kdirwatch_dnotify.h \
-	kprotocolinfofactory.h # old stuff
-
-kde_mime_DATA = magic
-kde_servicetypes_DATA = application.desktop kurifilterplugin.desktop \
-                        kcomprfilter.desktop kscan.desktop kdatatool.desktop \
-                        kfileplugin.desktop
-kde_services_DATA = kio_uiserver.desktop
-
+	kprotocolinfofactory.h # old stuff \
+	renamedlg.h skipdlg.h
+        
 parserfiles = yacc.y lex.l
 
-EXTRA_DIST = $(kde_mime_DATA) $(parserfiles)
-
-dummy.cpp: uiserver.kidl
-	echo > dummy.cpp
-
-kmailservice_SOURCES = kmailservice.cpp
-kmailservice_LDADD = $(LIB_KDECORE)
-kmailservice_LDFLAGS = $(KDE_RPATH) $(all_libraries)
-
-ktelnetservice_SOURCES = ktelnetservice.cpp
-ktelnetservice_LDADD = $(LIB_KDECORE)
-ktelnetservice_LDFLAGS = $(KDE_RPATH) $(all_libraries)
-
-protocol_DATA = kmailservice.protocol telnet.protocol rlogin.protocol
-protocoldir = $(kde_servicesdir)
-
-update_DATA = kioslave.upd useragent.pl proxytype.pl
-updatedir = $(kde_datadir)/kconf_update
-
-servicetype_DATA = renamedlgplugin.desktop
-servicetypedir = $(kde_servicetypesdir)
+EXTRA_DIST = $(parserfiles)
 
 parser: $(parserfiles)
 	cd $(srcdir) ;\
