install uiserver.h again
svn path=/trunk/kdelibs/; revision=129816

--- a/kio/misc/Makefile.am
+++ b/kio/misc/Makefile.am
@@ -53,3 +53,6 @@ ktelnetservice_LDFLAGS = $(KDE_RPATH) $(all_libraries)
 
 protocol_DATA = kmailservice.protocol telnet.protocol rlogin.protocol
 protocoldir = $(kde_servicesdir)
+
+kiomiscdir = $(includedir)/kio
+kiomisc_HEADERS = uiserver.h
