Oops, those should be installed too.
svn path=/trunk/kdelibs/; revision=129818

--- a/kio/misc/Makefile.am
+++ b/kio/misc/Makefile.am
@@ -55,4 +55,4 @@ protocol_DATA = kmailservice.protocol telnet.protocol rlogin.protocol
 protocoldir = $(kde_servicesdir)
 
 kiomiscdir = $(includedir)/kio
-kiomisc_HEADERS = uiserver.h
+kiomisc_HEADERS = uiserver.h renamedlg.h skipdlg.h
