i don't know why my build failed because ln -s returns false for an already existing link... if this happens, simply ignore the error instead of stopping the entire build...
svn path=/trunk/kdelibs/; revision=129834

--- a/kdoctools/Makefile.am
+++ b/kdoctools/Makefile.am
@@ -53,7 +53,7 @@ uninstall-local:
 	-rm -rf $(DESTDIR)$(kde_datadir)/ksgmltools2/docbook
 
 kgzipfilter.cpp: 
-	$(LN_S) $(srcdir)/../kioslave/gzip/kgzipfilter.cpp .
+	-$(LN_S) $(srcdir)/../kioslave/gzip/kgzipfilter.cpp .
 
 kbzip2filter.cpp:
-	$(LN_S) $(srcdir)/../kioslave/bzip2/kbzip2filter.cpp .
+	-$(LN_S) $(srcdir)/../kioslave/bzip2/kbzip2filter.cpp .
