Nope no KSYCOCA anymore
svn path=/trunk/kdelibs/; revision=129928

--- a/ksmartcard/kardlib/Makefile.am
+++ b/ksmartcard/kardlib/Makefile.am
@@ -3,7 +3,7 @@ INCLUDES=$(all_includes) $(PCSC_INCLUDES) -I$(top_srcdir)/kio -I../kardimpl
 
 bin_PROGRAMS = testkdepcsc
 testkdepcsc_SOURCES = teste.cc
-testkdepcsc_LDADD = $(LIB_KDEUI) $(LIB_KSYCOCA) -lksmartcard
+testkdepcsc_LDADD = $(LIB_KDEUI) -lksmartcard
 
 lib_LTLIBRARIES = libksmartcard.la
 METASOURCES= AUTO
@@ -26,8 +26,8 @@ libksmartcard_la_SOURCES = \
 				kcardimplementation.cc
 
 libksmartcard_la_LDFLAGS = $(all_libraries) $(PCSC_LDFLAGS) -version-info 1:0 -no-undefined
-libksmartcard_la_LIBADD = $(LIB_KDEUI) $(LIB_KSYCOCA)
-libksmartcard_la_DEPENDENCIES = $(LIB_KDEUI) $(LIB_KSYCOCA)
+libksmartcard_la_LIBADD = $(LIB_KDEUI)
+libksmartcard_la_DEPENDENCIES = $(LIB_KDEUI)
 
 libksmartcard_la_METASOURCES = AUTO
 
