--- a/arts/flow/gsl/Makefile.am
+++ b/arts/flow/gsl/Makefile.am
@@ -13,7 +13,7 @@ INCLUDES = -I$(top_srcdir)/arts/flow -I$(top_srcdir)/arts/mcop $(all_includes)
 noinst_LTLIBRARIES = libgsl.la
 
 libgsl_la_SOURCES = $(GSL_C_SRC) gslglib.c gslglibhash.cc gslartsthreads.cc
-libgsl_la_LIBADD = $(top_builddir)/arts/mcop/libmcop.la -lm
+libgsl_la_LIBADD = $(top_builddir)/arts/mcop/libmcop.la -lm $(LIBPOSIX4)
 libgsl_la_LDFLAGS = -no-undefined
 
 noinst_PROGRAMS = $(GSL_NOINST_PROGS)
