Make KLocale::languageTwoAlpha() work
svn path=/trunk/kdelibs/; revision=130094

--- a/kdecore/Makefile.am
+++ b/kdecore/Makefile.am
@@ -86,7 +86,7 @@ libkdecore_la_METASOURCES = AUTO
 SRCDOC_DEST=$(kde_htmldir)/en/kdelibs/kdecore
 
 kdebugdir = $(kde_confdir)
-kdebug_DATA = kdebug.areas kdebugrc
+kdebug_DATA = kdebug.areas kdebugrc language.codes
 
 kckey_h : $(srcdir)/generate_keys.sh $(QNAMESPACE_H)
 	(cd $(srcdir) && ./generate_keys.sh $(QNAMESPACE_H))
