--- a/mimetypes/application/pgp-encrypted.desktop
+++ b/mimetypes/application/pgp-encrypted.desktop
@@ -3,4 +3,4 @@ Type=MimeType
 MimeType=application/pgp-encrypted
 Icon=encrypted
 Patterns=
-Comment=PGP/MIME encrypted message
+Comment=PGP/MIME encrypted message header
