--- a/kio/kfile/tests/Makefile.am
+++ b/kio/kfile/tests/Makefile.am
@@ -28,7 +28,7 @@ check_PROGRAMS = kfstest kurlrequestertest kfiletreeviewtest \
 
 METASOURCES = AUTO
 
-LDADD = ../libkfile.la
+LDADD = $(LIB_KFILE)
 kurlrequestertest_SOURCES = kurlrequestertest.cpp
 kfstest_SOURCES = kfstest.cpp
 kfiletreeviewtest_SOURCES = kfiletreeviewtest.cpp
