fix compilation again. -I$(top_srcdir)/khtml/java is needed :/
svn path=/trunk/kdelibs/; revision=130224

--- a/khtml/java/tests/Makefile.am
+++ b/khtml/java/tests/Makefile.am
@@ -1,4 +1,4 @@
-INCLUDES = -I$(top_srcdir)/khtml $(all_includes)
+INCLUDES = -I$(top_srcdir)/khtml/java -I$(top_srcdir)/khtml $(all_includes)
 
 check_PROGRAMS = testserver 
 
