--- a/kstyles/themes/Makefile.am
+++ b/kstyles/themes/Makefile.am
@@ -3,7 +3,7 @@ data_DATA = qtplatinum.themerc qtcde.themerc qtmotif.themerc qtwindows.themerc \
 	qtmotifplus.themerc qtsgi.themerc \
 	system.themerc systemalt.themerc highcolor.themerc mega.themerc \
 	kstep.themerc marble.themerc \
-	default.themerc 
+	default.themerc b3.themerc
 datadir = $(kde_datadir)/kstyle/themes
 
 EXTRA_DIST = $(data_DATA)
