$(all_includes) shall be last ! [I had a bug in my all_includes-not-last detection script :}]
svn path=/trunk/kdelibs/; revision=131016

--- a/kwallet/backend/Makefile.am
+++ b/kwallet/backend/Makefile.am
@@ -1,5 +1,5 @@
 
-INCLUDES= -I$(srcdir) $(all_includes) -I$(srcdir)/../client
+INCLUDES= -I$(srcdir) -I$(srcdir)/../client $(all_includes)
 
 lib_LTLIBRARIES = libkwalletbackend.la
 
