--- a/interfaces/kscript/sample/Makefile.am
+++ b/interfaces/kscript/sample/Makefile.am
@@ -1,4 +1,4 @@
-INCLUDES = -I$(top_srcdir)/kio -I$(top_srcdir)/interfaces -I$(srcdir) -I$(top_srcdir) $(all_includes) -I$(top_srcdir)/interfaces/kscript
+INCLUDES = -I$(top_srcdir)/kio -I$(top_srcdir)/interfaces -I$(srcdir) -I$(top_srcdir) -I$(top_srcdir)/interfaces/kscript $(all_includes)
 
 lib_LTLIBRARIES = libshellscript.la
 
