KMManager   - added some utility functions KPrintDialog   - added possibility to have a persistent standalone dialog (used by kprinter)   - use private class for future BC   - installation of header file KPrinter/KMPrinter   - added possibility to configure a KPrinter object without a print dialog   - added various enum values for new features KPrintPreview   - not based on a main window anymore
svn path=/trunk/kdelibs/; revision=131188

--- a/kdeprint/Makefile.am
+++ b/kdeprint/Makefile.am
@@ -34,7 +34,7 @@ noinst_HEADERS = kmdbentry.h kmfactory.h kmjob.h kmjobmanager.h \
 
 include_HEADERS = kprinter.h kprintaction.h
 
-kdeprint_HEADERS = kprintdialogpage.h kpreloadobject.h kmmanager.h kmprinter.h kmobject.h
+kdeprint_HEADERS = kprintdialogpage.h kpreloadobject.h kmmanager.h kmprinter.h kmobject.h kprintdialog.h
 kdeprintdir = $(includedir)/kdeprint
 
 EXTRA_DIST = maticparser.yy maticscanner.ll kprintpreviewui.rc
