Turn the Lights on.
Styles generously donated by TrollTech.

svn path=/trunk/kdelibs/; revision=131718

--- a/kstyles/Makefile.am
+++ b/kstyles/Makefile.am
@@ -1,4 +1,4 @@
 
 #SUBDIRS=utils themes highcolor pics \
 #	basicplugin klegacy riscos megagradient stepplugin web
-SUBDIRS = highcolor themes
+SUBDIRS = highcolor light themes
