--- a/kstyles/Makefile.am
+++ b/kstyles/Makefile.am
@@ -1,4 +1,4 @@
 
 #SUBDIRS=utils themes highcolor pics \
 #	basicplugin klegacy riscos megagradient stepplugin web
-SUBDIRS = highcolor light themes
+SUBDIRS = highcolor light kthemestyle themes
