Now that KThemeStyle is back again, install pics and riscos, and update the .themerc's to have these show up in kcontrol
svn path=/trunk/kdelibs/; revision=131722

--- a/kstyles/Makefile.am
+++ b/kstyles/Makefile.am
@@ -1,4 +1,5 @@
 
 #SUBDIRS=utils themes highcolor pics \
 #	basicplugin klegacy riscos megagradient stepplugin web
-SUBDIRS = highcolor light kthemestyle themes
+SUBDIRS = highcolor themes  light kthemestyle pics riscos
+
