include qwizard to the list of qtmessages...
Is that alright Coolo?

svn path=/trunk/kdelibs/; revision=131788

--- a/Makefile.am
+++ b/Makefile.am
@@ -90,7 +90,7 @@ qtmessages:
 	cd $(top_srcdir)/../qt-copy/src ;\
 	find . -name "*.cpp" | grep -v moc_ > list ;\
 	for file in qfiledialog qcolordialog qprintdialog \
-		qurloperator qftp qhttp qlocal; do \
+		qurloperator qftp qhttp qlocal qwizard; do \
 		grep -v $$file list > list.new && mv list.new list ;\
 	done ;\
 	xgettext -C -ktr `cat list` 
