Ooops, there _are_ std patterns for this mimetype
svn path=/trunk/kdelibs/; revision=131835

--- a/mimetypes/application/pkcs7-signature.desktop
+++ b/mimetypes/application/pkcs7-signature.desktop
@@ -2,6 +2,6 @@
 Type=MimeType
 MimeType=application/x-pkcs7-signature
 Icon=signature
-Patterns=
+Patterns=*.p7s;*.P7S
 Comment=Detached S/MIME signature
 Comment[xx]=xx
