- printer status checking using "lpc" - job retrieval using "lpq" - first implementation of a job manager (passive at this moment) All "lpc" and "lpq" calls are made asynchronously to avoid blocking the GUI. However, this produces a delay for new informations to be shown. One solution could be to have another timer with a timeout at n+1/2.
svn path=/trunk/kdelibs/; revision=131986

--- a/kdeprint/lpr/Makefile.am
+++ b/kdeprint/lpr/Makefile.am
@@ -4,14 +4,16 @@ kde_module_LTLIBRARIES = libkdeprint_lpr.la
 
 libkdeprint_lpr_la_SOURCES = printcapreader.cpp lprhandler.cpp \
 			     matichandler.cpp klprfactory.cpp kmlprmanager.cpp \
-			     kmlpruimanager.cpp
+			     kmlpruimanager.cpp lpchelper.cpp lpqhelper.cpp \
+			     kmlprjobmanager.cpp
 libkdeprint_lpr_la_LDFLAGS = $(all_libraries) -module -avoid-version -no-undefined
 libkdeprint_lpr_la_LIBADD = $(top_builddir)/kdeprint/management/libkdeprint_management.la $(LIB_KDEUI)
 libkdeprint_lpr_la_METASOURCES = AUTO
 
 noinst_HEADERS = printcapentry.h printcapreader.h lprhandler.h \
 		 matichandler.h klprfactory.h kmlprmanager.h \
-		 kmlpruimanager.h
+		 kmlpruimanager.h lpchelper.h lpqhelper.h \
+		 kmlprjobmanager.h
 
 #bin_PROGRAMS = make_driver_db_lpd
 #make_driver_db_lpd_SOURCES = make_driver_db_lpd.c
