Binary compatible fixes for KDirWatch: - Process all FAM Events, not only the first - Watch each directory at most once (otherwise fam damon could abort) - Move all implementation from KDirWatch to KDirWatchPrivate   with kdirwatch_p.h header: e.g. processFamEvent slot moved,   dnotify handler moved to KDirWatchPrivate too (KDirWatchNotifyHandler removed) Checked for compilation with all HAVE_FAM/HAVE_DNOTIFY combinations. Patch seems large because of movings. Hopefully no breakage :-)
svn path=/trunk/kdelibs/; revision=132215

--- a/kio/kio/Makefile.am
+++ b/kio/kio/Makefile.am
@@ -101,7 +101,7 @@ kioinclude_HEADERS = connection.h \
 noinst_HEADERS = kservicetypefactory.h kservicefactory.h \
 	kmessageboxwrapper.h \
 	ktraderparse.h ktraderparsetree.h yacc.h \
-	kimageiofactory.h kdirwatch_dnotify.h \
+	kimageiofactory.h kdirwatch_p.h \
 	kprotocolinfofactory.h # old stuff \
 	renamedlg.h skipdlg.h
         
