Add kkeynative.h and swap compile order of kglobalaccel_x11.cpp and kglobalaccel.cpp
svn path=/trunk/kdelibs/; revision=132438

--- a/kdecore/Makefile.am
+++ b/kdecore/Makefile.am
@@ -32,7 +32,8 @@ include_HEADERS = kconfig.h kconfigdata.h ksimpleconfig.h kconfigbase.h \
 	kcharsets.h \
 	kprocess.h kprocctrl.h klocale.h kicontheme.h kiconloader.h kdebug.h \
 	kwinmodule.h kwin.h krootprop.h \
-	kshortcut.h kaccelaction.h kaccel.h kglobalaccel.h kstdaccel.h \
+	kshortcut.h kkeynative.h kaccelaction.h kaccel.h kglobalaccel.h \
+	kstdaccel.h \
 	kcatalogue.h \
 	kregexp.h kcompletion.h kstringhandler.h kstringhandler.h \
 	kstddirs.h kstandarddirs.h kglobal.h kglobalsettings.h ksharedptr.h \
@@ -62,8 +63,8 @@ libkdecore_la_SOURCES = libintl.cpp kapplication.cpp kdebug.cpp netwm.cpp  \
 	kwin.cpp kwinmodule.cpp krootprop.cpp kcharsets.cpp \
 	kckey.cpp kshortcut.cpp kkey_x11.cpp kkeynative_x11.cpp \
 	kkeysequenceold.cpp kkeysequence_emb.cpp \
-	kaccelaction.cpp kaccelbase.cpp kaccel.cpp kglobalaccel.cpp \
-	kglobalaccel_x11.cpp kstdaccel.cpp \
+	kaccelaction.cpp kaccelbase.cpp kaccel.cpp kglobalaccel_x11.cpp \
+	kglobalaccel.cpp kstdaccel.cpp \
 	kcrash.cpp kurl.cpp kregexp.cpp \
 	kglobal.cpp kglobalsettings.cpp dmalloc.cpp  \
 	kallocator.cpp kvmallocator.cpp kmimesourcefactory.cpp \
