CVS_SILENT add company
svn path=/trunk/kdelibs/; revision=132492

--- a/mimetypes/application/illustrator.desktop
+++ b/mimetypes/application/illustrator.desktop
@@ -3,4 +3,4 @@ Type=MimeType
 MimeType=application/illustrator
 Icon=postscript
 Patterns=*.ai;*.AI;
-Comment=Illustrator Document
+Comment=Adobe Illustrator Document
