- s/if text/if test/   no idea, if it works as expected, but at least _this_ error message is   gone :)
svn path=/trunk/kdelibs/; revision=132588

--- a/arts/configure.in.in
+++ b/arts/configure.in.in
@@ -116,7 +116,7 @@ AC_MSG_CHECKING([for posix realtime scheduling support])
 save_LIBS="$LIBS"
 LIBPOSIX4=""
 ARTS_TRY_LINK_POSIX_REALTIME
-if text "x$arts_realtime_sched" = "xno"; then
+if test "x$arts_realtime_sched" = "xno"; then
    LIBS="$LIBS -lposix4"
    ARTS_TRY_LINK_POSIX_REALTIME
    if test "x$arts_realtime_sched" = "xyes"; then
